<resources>
    <string name="app_name">PokemonQuizz</string>
    <string name="title_main_page">Who\'s that Pokémon ?</string>
    <string name="pokemon_height">Taille : </string>
    <string name="pokemon_weight">Poids : </string>
    <string name="pokemon_id">ID Pokedex : </string>
    <string name="title_poke_quizz">PokeQuizz</string>
    <string name="answer_is">Ta réponse : </string>
    <string name="back">Retour</string>
    <string name="confirm">Confirmer</string>
    <string name="pokemon_found">Bravo, vous avez trouvé le Pokémon</string>
    <string name="pokemon_not_found">Dommage, retentez votre chance avec ce nouveau Pokémon</string>
    <string name="pokemon_name_needed">Vous devez renseigner un nom de Pokémon</string>
    <string name="main_play_button">Jouons !</string>
    <string name="main_pokedex_button">Pokédex</string>
</resources>