<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_pokedex">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_layout_height"
        android:text="@string/title_poke_quizz"
        android:gravity="center"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/title_size"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/go_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:text="@string/back"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin"/>

        <Button
            android:id="@+id/confirm_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_marginRight="@dimen/common_margin"
            android:background="@color/green"
            android:text="@string/confirm" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/question_m_l"
        android:layout_marginTop="@dimen/question_m_t"
        android:text="@string/title_main_page"
        android:textColor="@color/black"
        android:textAlignment="textStart"
        android:textSize="@dimen/question_size" />

    <ImageView
        android:id="@+id/picture_poke_quizz"
        android:layout_width="@dimen/picture_size"
        android:layout_height="@dimen/picture_size"
        android:layout_gravity="center"
        android:src="@drawable/pokemon_to_find"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/answer_is"
        android:textColor="@color/black"
        android:gravity="center"  />

    <EditText
        android:id="@+id/user_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginRight="@dimen/answer_margin"
        android:layout_marginLeft="@dimen/answer_margin" />

</LinearLayout>